komment es review modell es service kezdemeny

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #Obsidian setting files
-.obsidian/*
+.obsidian/
 
 vscode/*
 !.vscode/settings.json
@@ -13,3 +13,5 @@ vscode/*
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+/node_modules
